cmapp.yaml
apiVersion:                  extensions/v1beta1
kind:                        Deployment
metadata:
  name:                      cmapp
spec:
  replicas:                  1
  template:
    metadata:
      labels:
        app:                 cmapp
    spec:
      containers:
      - name:                sise
        image:               mhausenblas/simpleservice:0.5.0
        ports:
        - containerPort:     9876
